--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -62,6 +62,7 @@
           }
           flex: 1;
           border-radius: 5px;
+          border: 0.4px solid #c6a0f8;
           margin-right: 25px;
           margin-top: 40px;
           padding: 5px;
