--- a/src/Components/common/Navbar/navbar.scss
+++ b/src/Components/common/Navbar/navbar.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 900;
   box-shadow: 0rem 0.0625rem 0.3125rem rgb(227, 227, 227);
   // Mis en forme image
   img {
