--- a/src/Components/Single/single.scss
+++ b/src/Components/Single/single.scss
@@ -49,3 +49,11 @@
     }
   }
 }
+
+@media screen and(max-width:700px) {
+  .single {
+    .content_view {
+      flex-direction: column;
+    }
+  }
+}
