--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -49,6 +49,11 @@
       }
     }
     .pages {
+      .section_design {
+        p {
+          margin: 0;
+        }
+      }
       .cards {
         display: flex;
         flex-wrap: wrap;
@@ -63,8 +68,8 @@
           flex: 1;
           border-radius: 5px;
           border: 0.4px solid #c6a0f8;
-          margin-right: 25px;
-          margin-top: 40px;
+          margin: 0px 20px;
+          // margin-top: 10px;
           padding: 5px;
           box-shadow: 0px 7px 20px #c6a0f851;
 
@@ -114,6 +119,13 @@
           }
         }
       }
+      .pages {
+        .cards {
+          .lien {
+            margin-top: 30px;
+          }
+        }
+      }
     }
   }
 }
@@ -150,7 +162,6 @@
       .cards {
         width: 80%;
         margin: auto;
-        display: block !important;
       }
     }
   }
