--- a/src/Components/Page/page.scss
+++ b/src/Components/Page/page.scss
@@ -1,16 +1,17 @@
 .page {
-  width: 782px;
-  height: 900px;
-  padding: 10px;
+  padding: 5px;
+  flex: 1;
+  overflow: hidden;
+  background: #000;
   display: flex;
   align-items: center;
   justify-content: center;
 
   .show_page {
-    width: 100%;
-    height: 100%;
+    width: 782px;
+    height: 900px;
     border: 2px solid #333;
-    padding: 5px;
+    padding: 2px;
     display: flex;
     justify-content: center;
     .bordure_second {
@@ -20,6 +21,8 @@
 
       .header_text {
         text-align: center;
+        width: 90%;
+        margin: auto;
         h3 {
           font-size: 1.5rem;
           color: #333;
