--- a/src/Components/Single/Design/design.scss
+++ b/src/Components/Single/Design/design.scss
@@ -7,6 +7,38 @@
 
   animation: opening 1s ease;
 
+  .bg_chooser {
+    width: 100%;
+    min-height: 200px;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    .bg_card {
+      width: 90px;
+      height: 90px;
+      margin: 5px;
+      border: 1px solid #3333;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      &:hover {
+        transform: translateY(5px);
+        transition: all 0.3s ease-in;
+      }
+
+      img {
+        width: 100%;
+        border-radius: 50%;
+        height: 100%;
+      }
+    }
+  }
+
   @keyframes opening {
     0% {
       opacity: 0;
