Ajout des différentes pages

--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -121,6 +121,7 @@
       }
       .pages {
         .cards {
+          display: block;
           .lien {
             margin-top: 30px;
           }
