--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,4 +29,14 @@
   // font-family: "Lato", sans-serif;
   // font-family: "Noto Sans Mono", monospace;
   font-family: "Poppins", sans-serif;
+  animation: apa 0.3s ease-in;
+
+  @keyframes apa {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
