--- a/src/Components/apropos/about.scss
+++ b/src/Components/apropos/about.scss
@@ -17,7 +17,7 @@
   .second {
     width: 95%;
     margin: auto;
-    height: 60vh;
+    min-height: 60vh;
     margin-top: 1rem;
 
     display: flex;
@@ -79,7 +79,7 @@
       }
     }
     .right {
-      height: 100%;
+      min-height: 100%;
       padding: 10px;
       .container {
         height: 95%;
@@ -91,7 +91,8 @@
         background-color: #f3e8ff;
         border-radius: 10px;
         img {
-          height: 90%;
+          width: 98%;
+          height: 80%;
         }
       }
     }
@@ -102,16 +103,19 @@
   }
 
   @media screen and(max-width:695px) {
+    overflow-y: scroll;
     min-height: 100vh;
     padding: 5px;
+    padding-bottom: 3rem;
     .first,
     .second {
       flex-direction: column;
       min-height: 100vh;
 
       .right {
-        height: 200px;
+        min-height: 200px;
         margin-top: 10px;
+        margin-bottom: 2rem;
       }
     }
   }
