--- a/src/Components/common/Footer/footer.scss
+++ b/src/Components/common/Footer/footer.scss
@@ -55,6 +55,7 @@
             a {
               text-decoration: none;
               color: #333;
+              text-decoration: underline;
             }
           }
         }
